--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "node ./build/app.js"
+    "start": "node ./build/app.js",
+    "build": "npx tsc",
+    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q build/app.js\""
   },
   "keywords": [],
   "author": "",
@@ -15,6 +17,8 @@
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/node": "^18.15.5",
+    "concurrently": "^7.6.0",
+    "nodemon": "^2.0.22",
     "typescript": "^5.0.2"
   }
 }
